--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-scripts": "4.0.3",
     "react-visibility-sensor": "^5.1.1",
     "recharts": "^2.0.9",
+    "redux": "^4.0.5",
+    "video-react": "^0.14.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
