--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-visibility-sensor": "^5.1.1",
     "recharts": "^2.0.9",
     "redux": "^4.0.5",
+    "slick-carousel": "^1.8.1",
     "video-react": "^0.14.1",
     "web-vitals": "^1.1.1"
   },
